# WarnetBot

./: .env.example  .env.test  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: black.yml  format.yml  formatter.yml  isort.yml  lint.yml  pyright.yml  ruff.yml  test.yml  type_checker.yml
bot/: __main__.py  bot.py  helper.py  types.py
bot/cogs/: achievement.py  admin.py  booster.py  color.py  color_v2.py  general.py  genshin.py  giveaway.py  khaenriah.py  loop.py  news.py  sticky.py  tcg.py  temporary.py
bot/cogs/achievement_commands/: admin.py
bot/cogs/achievement_ext/: admin.py  member.py
bot/cogs/ext/achievement/: admin.py  member.py  utils.py
bot/cogs/ext/admin/: __init__.py  general.py  utils.py  warn.py
bot/cogs/ext/booster/: exp.py
bot/cogs/ext/color/: utils.py
bot/cogs/ext/news/: genshin.py  hoyolab.py
bot/cogs/ext/tcg/: admin.py  member.py  utils.py
bot/cogs/ext/temprole/: time.py
bot/cogs/views/: achievement.py  color.py  color_v2.py  general.py  khaenriah.py  sticky.py  tcg.py
bot/config/: __init__.py  config.py  genshin.py  logger.py  news.py
bot/data/: achievement.json  achievement.xlsx  db.sql  genshin.json
bot/module/tatsu/: README.md  data_structures.py  wrapper.py
tests/bot/cogs/: test_general.py
tests/bot/cogs/ext/tcg/: test_utils.py
