[project]
name = "warnet-bot"
version = "1.13.0"
description = "A bot for Warga Nusantara Teyvat (WARNET) discord server"
readme = "README.md"
requires-python = "==3.11.*"
license = "MIT"
authors = [{ name = "Iqrar Agalosi Nureyza", email = "misteriqrar@gmail.com" }]
urls = { Repository = "https://github.com/warnet-gi/WarnetBot" }
dependencies = [
    "anyio>=4.9.0",
    "asyncpg>=0.30.0",
    "discord-py>=2.5.2",
    "hoyolab-rss-feeds==2.4.2",
    "imagetext-py==2.1.3",
    "pillow==10.3.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "ratelimit==2.2.1",
    "taskipy==1.12.0",
]

[dependency-groups]
dev = ["pytest==7.4.1", "pytest-cov==4.1.0", "ruff>=0.12.4", "pyright>=1.1.403"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ignore all pydocstyle
    "D",

    # ignore all TODO
    "TD",

    "T201",    # enable print
    "PLR0911", # allow many return
    "PLR0913", # allow many argument
    "FBT001",  # make cogs easy to read

    # conflict with formatter https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.pyright]
include = ["bot"]
ignore = ["tests"]
reportAttributeAccessIssue = "none" # discord.py design conflict with this

[tool.taskipy.tasks]
start = "uv run -m bot"
check = "ruff check && ruff format && pyright"
format = "ruff format"
lint = "ruff check"
